2010-03-12  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG fallback color doesn't work for bogus gradients.
        https://bugs.webkit.org/show_bug.cgi?id=35479

        Use a given fallback color on ignored gradients if present. Gradients
        must be ignored, if one dimension of the objects boundingBox is zero.

        Test: svg/custom/gradient-with-1d-boundingbox.svg

        * svg/graphics/SVGPaintServer.cpp:
        (WebCore::SVGPaintServer::strokePaintServer):
        * svg/graphics/SVGPaintServerGradient.cpp:
        (WebCore::SVGPaintServerGradient::setup):
2010-03-12  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG fallback color doesn't work for bogus gradients.
        https://bugs.webkit.org/show_bug.cgi?id=35479

        We now use a fallback color on ignored gradients for one dimensional objects,
        either a given fallback color or black as default.
        This causes a change of one LayoutTest, because it was done manually in the
        gradient PaintServer, without respecting a given fallback color.

        * platform/mac/svg/W3C-SVG-1.1/pservers-grad-17-b-expected.txt:
        * platform/mac/svg/custom/gradient-with-1d-boundingbox-expected.checksum: Added.
        * platform/mac/svg/custom/gradient-with-1d-boundingbox-expected.png: Added.
        * platform/mac/svg/custom/gradient-with-1d-boundingbox-expected.txt: Added.
        * svg/custom/gradient-with-1d-boundingbox.svg: Added.


Canonical link: https://commits.webkit.org/47225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55930 268f45cc-cd09-0410-ab3c-d52691b4dbfc