WebCore/svg/graphics/SVGPaintServer.cpp
@@ -123,8 +123,10 @@ SVGPaintServer* SVGPaintServer::strokePaintServer(const RenderStyle* style, cons
 
     SVGPaintServer* strokePaintServer = 0;
     SVGPaint::SVGPaintType paintType = stroke->paintType();
-    if (paintType == SVGPaint::SVG_PAINTTYPE_URI ||
-        paintType == SVGPaint::SVG_PAINTTYPE_URI_RGBCOLOR) {
+    if ((paintType == SVGPaint::SVG_PAINTTYPE_URI
+        || paintType == SVGPaint::SVG_PAINTTYPE_URI_RGBCOLOR)
+        && item->objectBoundingBox().width() != 0
+        && item->objectBoundingBox().height() != 0) {
         AtomicString id(SVGURIReference::getTarget(stroke->uri()));
         strokePaintServer = getPaintServerById(item->document(), id, item);
 
@@ -146,6 +148,11 @@ SVGPaintServer* SVGPaintServer::strokePaintServer(const RenderStyle* style, cons
         // FIXME: Ideally invalid colors would never get set on the RenderStyle and this could turn into an ASSERT
         if (!strokePaintServerSolid->color().isValid())
             strokePaintServer = 0;
+    }
+    if (!strokePaintServer) {
+        // default value (black), see bug 11017
+        strokePaintServer = sharedSolidPaintServer();
+        static_cast<SVGPaintServerSolid*>(strokePaintServer)->setColor(Color::black);
     }
 
     return strokePaintServer;
